# PyOutlookDispatcher

./: .gitignore  README.md  pyproject.toml
pyoutlookdispatcher/: __dispatcher.py  __init__.py
tests/: test_pyoutlookdispatcher.py
