[tool.poetry]
name = "PyOutlookDispatcher"
version = "0.2.0"
description = "A Simple Email Dispatcher based on top of win32Api"
authors = ["Rafael Tedesco <dev.rafaeltedesco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^303"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
